[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/wolf.gd" type="Script" id=1]
[ext_resource path="res://Sprites/sprite.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[node name="Wolf" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )
wait_timer_seconds = 0.5
walk_timer_seconds = 2.5

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 3.2
one_shot = true
autostart = true

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
